--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,38 +1,132 @@
+
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px;
-  background-color: #762cb6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    background-color: #762cb6;
 }
-header .flex-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+.flex__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-header .flex-header .header__title a {
-  text-decoration: none;
+
+.header__title{
+    display: flex;
 }
-header .flex-header .header__title a h1 {
-  font-weight: bold;
-  color: white;
-  font-size: 1.75rem;
+
+.header__title h1{
+    font-weight: bold;
+    color: white;
+    font-size: 1.75rem;
 }
-header .flex-header nav {
-  display: flex;
+
+.nav__menu{
+    display: flex;
 }
-header .flex-header nav ul {
-  display: flex;
-  list-style-type: none;
+
+.mobile__menu{
+    display: none;
+    cursor: pointer;
 }
-header .flex-header nav ul li {
-  padding-left: 24px;
+
+.mobile__menu div{
+    width: 32px;
+    height: 2px;
+    background: #FFFFFF;
+    margin: 8px;
+    transition: 0.3s;
 }
-header .flex-header nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1rem transition 0.5s;
+
+.menu__list{
+    display: flex;
+    list-style-type: none;
 }
-header .flex-header nav ul li a:hover {
-  font-weight: bold;
-}/*# sourceMappingURL=style.css.map */
+
+.menu__list-item{
+    padding-left: 24px;
+}
+
+.item__link{
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: 0.2s;
+}
+
+.item__link:hover{
+    color: white;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 999px) {
+
+    body{
+        overflow-x: hidden;
+    }
+    
+    .mobile__menu{
+        display: block;
+    }
+    
+    .menu__list{
+        position: absolute;
+        top: 10vh;
+        right: 0;
+        width: 50vw;
+        height: 70vh;
+        background: #762cb6;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+    .menu__list-item{
+        padding-left: 0;
+        opacity: 0;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .menu__list-item{
+        padding-right: 20px;
+    }
+}
+
+@media screen and (min-width:375px) {
+    .menu__list-item{
+        padding-right: 20px;
+    }
+}
+
+.menu__list.active{
+    transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.mobile__menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.mobile__menu.active .line2{
+    opacity: 0;
+}
+
+.mobile__menu.active .line3{
+    transform: rotate(45deg) translate(-5px, -7px);
+}
